--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -375,3 +375,14 @@ entrypoint = "./functions/update-profile/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/update-profile/*.html" ]
+
+[functions.profiles]
+enabled = true
+verify_jwt = true
+import_map = "./functions/profiles/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/profiles/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/profiles/*.html" ]
