--- a/supabase/functions/teams/deno.json
+++ b/supabase/functions/teams/deno.json
@@ -1,5 +1,5 @@
 {
   "imports": {
-    "supabase": "jsr:@supabase/supabase-js@2"
+    "@supabase/supabase-js": "npm:@supabase/supabase-js@2.81.1"
   }
 }
